fix: adjust app bar styling to have gap between items

--- a/example/src/admin/controls/AppBar.module.css
+++ b/example/src/admin/controls/AppBar.module.css
@@ -2,10 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 8px;
   overflow: visible;
 
   min-height: 48px;
   background-color: var(--gray-1);
+  width: 100%;
 
   padding-top: 4px;
   padding-bottom: 4px;
@@ -17,9 +19,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 8px;
   overflow: visible;
 
   min-height: 32px;
+  width: 100%;
 
   padding-top: 2px;
   padding-bottom: 2px;
